service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave
spec:
  ports:
    - name: http
      port: 8091
      targetPort: 8091
    - name: websocket
      port: 3000
      targetPort: 3000
  selector:
    name: zwave
