ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave
spec:
  rules:
    - host: zwave.example.com
      http:
        paths:
          - backend:
            pathType: Exact
              service:
                name: zwave
                port:
                  number: 8091
          - backend:
            pathType: Exact
              service:
                name: zwave
                port:
                  number: 3000
